--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --black: #2a2529;
+  --darkPrimary: #621111;
+  --lightgray: #fcdede;
+  --white: #fff;
+  --darkPlum: #231e22;
+  --primary: #d02929;
+  --background: #2a2529;
 }
 
 body {
@@ -15,9 +22,23 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--background);
+  color: var(--white);
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+#root {
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+  &:hover {
+    color: var(--darkPrimary);
+  }
 }
