--- a/src/components/Publications/Publication/Publication.scss
+++ b/src/components/Publications/Publication/Publication.scss
@@ -1,4 +1,4 @@
-.project {
+.publication {
   display: flex;
   flex-flow: column;
   margin: 1vh 1vw;
@@ -11,7 +11,7 @@
     background-position: center;
   }
 
-  &-name {
+  &-title {
     font-weight: bold;
   }
 }
