--- a/src/components/Publications/Publication/Publication.scss
+++ b/src/components/Publications/Publication/Publication.scss
@@ -1,17 +1,33 @@
 .publication {
   display: flex;
-  flex-flow: column;
+  flex-flow: row;
   margin: 1vh 1vw;
-  align-items: center;
+  flex: 1 1 45%;
+  background-color: var(--darkPlum);
+  border-radius: 10px;
 
   &-image {
-    height: 200px;
-    width: 200px;
+    width: 15vw;
+    min-width: 200px;
     background-size: cover;
     background-position: center;
+    border-radius: 10px 0 0 10px;
   }
 
-  &-title {
-    font-weight: bold;
+  &-content {
+    padding: 1.5vh;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    width: 100%;
+
+    &-title {
+      font-weight: bold;
+    }
+
+    a {
+      margin-top: 1.5vh;
+      text-align: right;
+    }
   }
 }
