--- a/src/components/Awards/Award/Award.scss
+++ b/src/components/Awards/Award/Award.scss
@@ -1,8 +1,13 @@
 .award {
   display: flex;
   flex-flow: column;
+  text-align: center;
+  justify-content: space-between;
   margin: 1vh 1vw;
-  align-items: center;
+  background-color: var(--darkPlum);
+  border-radius: 10px;
+  padding: 1.5vh;
+  flex: 0 1 30%;
 
   //   img {
   //     height: 150px;
