--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -8,8 +8,11 @@
   justify-content: center;
 
   .subtitle {
+    font-family: monospace;
+    font-size: 1.7rem;
   }
   .title {
     font-size: 2rem;
+    color: var(--primary);
   }
 }
