added theme changer

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -10,7 +10,9 @@
   .subtitle {
     font-family: monospace;
     font-size: 1.7rem;
+    color: var(--lightgray);
   }
+
   .title {
     font-size: 2rem;
     color: var(--primary);
