--- a/src/components/Experiences/Experience/Experience.scss
+++ b/src/components/Experiences/Experience/Experience.scss
@@ -37,3 +37,17 @@
     }
   }
 }
+
+@media screen and (max-width: 599px) {
+  .experience {
+    img {
+      height: 120px;
+    }
+
+    &-content {
+      &-date {
+        font-size: 0.8rem;
+      }
+    }
+  }
+}
