--- a/src/components/Certifications/Certification/Certification.scss
+++ b/src/components/Certifications/Certification/Certification.scss
@@ -2,7 +2,15 @@
   margin: 1vh 1vw;
 
   img {
-    height: 150px;
+    height: 100px;
     width: auto;
+  }
+}
+
+@media screen and (max-width: 599px) {
+  .certification {
+    img {
+      height: 80px;
+    }
   }
 }
