--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -18,3 +18,17 @@
     color: var(--primary);
   }
 }
+
+@media screen and (max-width: 445px) {
+  .banner {
+    height: 50vh;
+
+    .title {
+      font-size: 1.5rem;
+    }
+
+    .subtitle {
+      font-size: 1rem;
+    }
+  }
+}
