--- a/src/components/Educations/Education/Education.scss
+++ b/src/components/Educations/Education/Education.scss
@@ -23,3 +23,11 @@
     flex-flow: row;
   }
 }
+
+@media screen and (max-width: 445px) {
+  .education {
+    &-school {
+      display: none;
+    }
+  }
+}
