--- a/src/components/Publications/Publication/Publication.scss
+++ b/src/components/Publications/Publication/Publication.scss
@@ -32,3 +32,15 @@
     }
   }
 }
+
+@media screen and (max-width: 445px) {
+  .publication {
+    &-content-title {
+      font-size: 0.8rem;
+    }
+
+    &-image {
+      min-width: 120px;
+    }
+  }
+}
