--- a/src/components/Experiences/Experience/Experience.scss
+++ b/src/components/Experiences/Experience/Experience.scss
@@ -6,11 +6,15 @@
   border-radius: 10px;
   padding: 1.5vh;
   align-items: center;
-  flex: 0 1 25%;
+  flex: 1 1 25%;
 
-  img {
-    height: 150px;
-    width: auto;
+  &-image {
+    height: 20vw;
+    min-height: 200px;
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+    background-size: cover;
+    background-position: center;
   }
 
   &-content {
