added recommendation dialog

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,7 +28,7 @@
 
     &:hover {
       color: var(--primary);
-      background-color: var(--darkPrimary);
+      background-color: var(--background);
       border-color: var(--primary);
     }
   }
