--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -27,7 +27,7 @@
 
     .active {
       color: var(--primary);
-      background-color: var(--darkPrimary);
+      background-color: var(--background);
       border-color: var(--primary);
     }
   }
