--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,26 @@
     }
   }
 
+  &-card {
+    background: linear-gradient(
+      to bottom right,
+      hsl(0, 0%, 25%) 0%,
+      hsla(0, 0%, 25%, 0) 50%
+    );
+    z-index: 1;
+    position: relative;
+    border-radius: 10px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 1px;
+      background: var(--darkPlum);
+      border-radius: inherit;
+      z-index: -1;
+    }
+  }
+
   .copyright {
     color: var(--primary);
     padding: 10px;
