--- a/src/components/Recommendations/Recommendation/Recommendation.scss
+++ b/src/components/Recommendations/Recommendation/Recommendation.scss
@@ -6,39 +6,17 @@
   margin: 1vh;
 
   &-content {
-    border: 1px solid var(--darkPrimary);
-    border-radius: 10px;
     padding: 2vh 2vw;
-    background: var(--darkPlum);
     cursor: pointer;
-    position: relative;
 
-    &::before {
-      content: '" ';
-      font-size: x-large;
-      color: var(--darkPrimary);
-      font-family: -webkit-body;
-    }
-
-    &::after {
-      content: ' "';
+    .quotes {
       font-size: x-large;
       color: var(--darkPrimary);
       font-family: -webkit-body;
     }
 
     &:hover {
-      border-color: var(--primary);
-
-      .see-more {
-        display: inline;
-        color: var(--lightgray);
-        font-weight: bold;
-      }
-    }
-
-    .see-more {
-      display: none;
+      background-color: var(--primary);
     }
   }
 
