--- a/src/App.scss
+++ b/src/App.scss
@@ -34,11 +34,7 @@
   }
 
   &-card {
-    background: linear-gradient(
-      to bottom right,
-      hsl(0, 0%, 25%) 0%,
-      hsla(0, 0%, 25%, 0) 50%
-    );
+    background: var(--border-gradient);
     z-index: 1;
     position: relative;
     border-radius: 10px;
@@ -59,6 +55,22 @@
     font-size: smaller;
     width: -webkit-fill-available;
     text-align-last: center;
+    background: var(--darkPlum);
+  }
+
+  .down-arrow-dark {
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    fill: var(--darkPlum);
+  }
+
+  .down-arrow-light {
+    background: var(--darkPlum);
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    fill: var(--background);
   }
 }
 
