--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,11 @@
   --darkPlum: #231e22;
   --primary: #d02929;
   --background: #2a2529;
+  --border-gradient: linear-gradient(
+    to bottom right,
+    hsl(0, 0%, 25%) 0%,
+    hsla(0, 0%, 25%, 0) 50%
+  );
 }
 
 body {
