added experience dialog

--- a/src/components/Experiences/Experience/Experience.scss
+++ b/src/components/Experiences/Experience/Experience.scss
@@ -4,6 +4,11 @@
   margin: 1vh 1vw;
   align-items: center;
   flex: 1 1 25%;
+  cursor: pointer;
+
+  &:hover {
+    background-color: var(--primary);
+  }
 
   &-image {
     height: 20vw;
