--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
   }
 
   &-content {
-    padding-top: 2vh;
+    padding: 2vh 0 1vh 0;
     display: flex;
     flex-flow: wrap;
     justify-content: center;
