--- a/src/components/Experiences/Experience/Experience-Dialog/Experience-Dialog.scss
+++ b/src/components/Experiences/Experience/Experience-Dialog/Experience-Dialog.scss
@@ -6,6 +6,8 @@
     border-radius: 10px;
     padding: 1.5vh;
     width: 70vw;
+    max-width: unset;
+    max-height: 70vh;
     color: var(--white);
     border: 1px solid var(--darkPrimary);
   }
@@ -23,7 +25,7 @@
     }
 
     &-details {
-      color: var(--lightgray);
+      color: var(--white);
       display: flex;
       flex-flow: column;
       align-items: flex-start;
@@ -43,7 +45,7 @@
 
   &-details {
     padding: 1vh 0;
-    color: var(--lightgray);
+    color: var(--white);
 
     &-technologies {
       display: flex;
@@ -52,6 +54,40 @@
       .skill {
         width: unset;
         padding: 10px;
+      }
+    }
+
+    .app-title {
+      padding: 2vh 0;
+    }
+
+    .assignment {
+      padding-bottom: 2vh;
+
+      &-title {
+        font-weight: bold;
+      }
+      &-date {
+      }
+      &-industry {
+      }
+      &-technologies {
+        display: flex;
+        flex-flow: wrap;
+        align-items: center;
+
+        .skill {
+          padding: 3px;
+          width: unset;
+
+          img {
+            height: 25px;
+          }
+        }
+      }
+
+      &-contribution {
+        color: var(--lightgray);
       }
     }
   }
