--- a/src/components/Recommendations/Recommendation/Recommendation-Dialog/Recommendation-Dialog.scss
+++ b/src/components/Recommendations/Recommendation/Recommendation-Dialog/Recommendation-Dialog.scss
@@ -6,6 +6,8 @@
     border-radius: 10px;
     padding: 1.5vh;
     width: 55vw;
+    max-width: unset;
+    max-height: 70vh;
     color: var(--white);
     border: 1px solid var(--darkPrimary);
   }
