--- a/src/components/Photography/Photo/Photo.scss
+++ b/src/components/Photography/Photo/Photo.scss
@@ -5,29 +5,9 @@
   align-items: center;
 
   &-image {
-    height: 200px;
-    width: 200px;
+    height: 18vw;
+    width: 18vw;
     background-size: cover;
     background-position: center;
-  }
-}
-
-@media screen and (max-width: 599px) {
-  .photo {
-    &-image {
-      height: 100px;
-      width: 100px;
-    }
-  }
-}
-
-@media screen and (max-width: 445px) {
-  .photo {
-    margin: 0.5vh 1vw;
-
-    &-image {
-      height: 75px;
-      width: 75px;
-    }
   }
 }
