--- a/src/components/Projects/Project/Project.scss
+++ b/src/components/Projects/Project/Project.scss
@@ -33,7 +33,13 @@
   }
 }
 
-@media screen and (max-width: 445px) {
+@media screen and (max-width: 980px) {
+  .project {
+    flex: 1 1 35%;
+  }
+}
+
+@media screen and (max-width: 630px) {
   .project {
     flex: 1 1 50%;
   }
