--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
   height: 35px;
   width: -webkit-fill-available;
   z-index: 2;
-  top: 0;
+  top: -2px;
   background: var(--border-gradient);
 
   &::before {
