--- a/src/components/Experiences/Experience/Experience.scss
+++ b/src/components/Experiences/Experience/Experience.scss
@@ -7,7 +7,7 @@
   cursor: pointer;
 
   &:hover {
-    background-color: var(--primary);
+    background-color: var(--background);
   }
 
   &-image {
