--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,18 @@
     hsl(0, 0%, 25%) 0%,
     hsla(0, 0%, 25%, 0) 50%
   );
+  --primary-gradient: linear-gradient(
+    to right,
+    var(--darkPlum),
+    #621111b0,
+    var(--darkPlum)
+  );
+  --light-gradient: linear-gradient(
+    to right,
+    var(--background),
+    #621111b0,
+    var(--background)
+  );
 }
 
 body {
