--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,10 +1,10 @@
 .banner {
-  background: var(--primary-gradient);
   height: 50vh;
   display: flex;
   flex-flow: row;
   justify-content: space-between;
   align-items: center;
+  margin-top: -2px;
 
   &-content {
     font-size: 1.7rem;
