--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,6 +9,7 @@
   z-index: 2;
   top: -2px;
   background: var(--primary-gradient);
+  position: relative;
 
   .title {
     color: var(--primary);
