--- a/src/index.scss
+++ b/src/index.scss
@@ -34,6 +34,16 @@
   );
 }
 
+@font-face {
+  font-family: "FuzzyBubbles";
+  src: url("../src/assets/fonts/FuzzyBubbles-Regular/fuzzybubbles-regular-webfont.woff2")
+    format("woff2");
+  src: url("../src/assets/fonts/FuzzyBubbles-Regular/fuzzybubbles-regular-webfont.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   display: flex;
