--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -32,7 +32,7 @@
           fill: var(--primary);
 
           &:hover {
-            fill: var(--darkPrimary);
+            fill: var(--secondary);
           }
         }
       }
