--- a/src/components/Photography/Photography.scss
+++ b/src/components/Photography/Photography.scss
@@ -2,5 +2,5 @@
   display: flex;
   flex-flow: column;
   align-items: center;
-  background-color: var(--darkPlum);
+  background-color: var(--dark-secondary);
 }
