--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -17,9 +17,9 @@
       text-decoration: none;
       color: var(--primary);
       text-transform: uppercase;
-      background-color: var(--darkPlum);
+      background-color: var(--dark-secondary);
       padding: 0.5vh 1vh;
-      border: 1px solid var(--darkPrimary);
+      border: 1px solid var(--secondary);
       border-radius: 6px;
       margin: 0.6vw;
       cursor: pointer;
