--- a/src/components/Recommendations/Recommendation/Recommendation.scss
+++ b/src/components/Recommendations/Recommendation/Recommendation.scss
@@ -11,7 +11,7 @@
 
     .quotes {
       font-size: x-large;
-      color: var(--darkPrimary);
+      color: var(--secondary);
       font-family: -webkit-body;
     }
 
