--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -40,7 +40,7 @@
           fill: var(--primary);
 
           &:hover {
-            fill: var(--darkPrimary);
+            fill: var(--secondary);
           }
         }
       }
