--- a/src/components/UI/Skill/Skill.scss
+++ b/src/components/UI/Skill/Skill.scss
@@ -14,7 +14,7 @@
     width: 100%;
     padding: 1px;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
-    background-color: var(--darkPlum);
+    background-color: var(--dark-secondary);
 
     &-fill {
       display: block;
